# OOP_lab_work_01

./: CMakeLists.txt  README.md  Stack.h  Stack_old.h  history_revisions.cpp  history_revisions.h  insert.cpp  insert.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  remove.cpp  remove.h  replace.cpp  replace.h  test.cpp  test.h  text_edit_operation.cpp  text_edit_operation.h  text_editor.cpp  text_editor.h  text_editor_lab_1.pro  text_operation.h
