cmake_minimum_required(VERSION 3.17)
project(lab_work_01)

set(CMAKE_CXX_STANDARD 20)

add_executable(lab_work_01 main.cpp text_edit_operation.cpp text_edit_operation.h history_revisions.h test.h test.cpp Stack_old.h history_revisions.cpp replace.h replace.cpp Stack.h text_operation.h remove.h insert.h remove.cpp insert.cpp)